--- a/templates/home_page.html
+++ b/templates/home_page.html
@@ -4,12 +4,10 @@
 
 {% block body %}
 
-
-
+<div class="container-md" id="hometext">
     <br>
-    <h1>Welcome to gym sign-in system</h1>
-    <p> Please select what you would like to do</p>
-    <a class="btn btn-primary" href="/login" role="button">Login</a>
+    <h1>Welcome to Lincoln Fitness</h1>
+    <a class="btn btn-primary" href="/login" role="button">Sign In</a>
     <a class="btn btn-primary" href="member_registration" role="button">Sign Up</a>
-
+</div>
 {% endblock %}
