--- a/templates/member_dashboard.html
+++ b/templates/member_dashboard.html
@@ -5,8 +5,9 @@
 
 
 {% block body %}
-    <h1>Welcome to the member dashboard</h1>
-    <p> Please select what you would like to do</p>
+<div class="container-md" id="hometext">
+    <h1>Welcome to Member Dashboard</h1>
+    <!-- <p> Please select what you would like to do</p>
     <a class="btn btn-primary" href="/view_member_profile" role="button">View and/or update your profile</a>
     <a class="btn btn-primary" href="/meet_trainer" role="button">Book a trainer</a>
     <a class="btn btn-primary" href="/group_class_calendar" role="button">Book a class</a>
@@ -15,6 +16,6 @@
     <br />
     <a class="btn btn-primary" href="/check_in" role="button">Check in to the gym/class/personal training</a>
     <a class="btn btn-primary" href="/subscription" role="button"> Update your subscription</a> 
-    <a class="btn btn-primary" href="/make_a_payment" role="button">Make a payment / View subscription details </a> 
-    
+    <a class="btn btn-primary" href="/make_a_payment" role="button">Make a payment / View subscription details </a>  -->
+</div>
 {% endblock %}
