--- a/static/site.css
+++ b/static/site.css
@@ -1,11 +1,22 @@
 .header {
-padding: 60px;
+padding: 40px;
 text-align: right;
 background:url('Boxer.jpg');
-color: blue;
-font-size: 50px;
+color:white;
+font-size:50px;
 font-family: "Tahoma", sans-serif; 
 font-weight: bold;
+}
+
+#hometext{
+  font-size:40px;
+  font-family: "Tahoma", sans-serif; 
+  font-weight: bold;
+  text-align: center;
+}
+#hometext .btn{
+  padding-left: 5%;
+  padding-right: 5%;
 }
 
 body p.datenumber {
@@ -22,6 +33,9 @@ body p.datenumber {
     padding:10px;
 }
 
+.form_btn .btn{
+  margin-left: 5px;
+}
 .message{
     margin-top: 20px;
     height: 100%;
@@ -36,7 +50,7 @@ body p.datenumber {
 }
 
 .form_wrapper{
-    width: 95em;
+    width: 55em;
     margin: 0 auto;  
     padding: 1.5em;
 }
@@ -47,4 +61,14 @@ body p.datenumber {
 
 .financial_report_table{
     display: none;
+}
+
+#input {
+  background-position: 10px 10px;
+  background-repeat: no-repeat;
+  width:100%;
+  font-size: 16px;
+  padding: 12px 20px 12px 40px;
+  border: 1px solid #ddd;
+  margin-bottom: 12px;
 }
