--- a/templates/meet_trainer.html
+++ b/templates/meet_trainer.html
@@ -26,17 +26,6 @@ var input, filter, table, tr, td, i;
 </script>
 
 
-<style>
-#input {
-  background-position: 10px 10px;
-  background-repeat: no-repeat;
-  width:100%;
-  font-size: 16px;
-  padding: 12px 20px 12px 40px;
-  border: 1px solid #ddd;
-  margin-bottom: 12px;
-}
-</style>
 <div class="container">
     <h1> Meet the Trainers</h1>
     <div class="row">
@@ -50,14 +39,14 @@ var input, filter, table, tr, td, i;
           <th>Photo</th>
           <th>Name</th>
           <th>Gender</th>
-          <th>specialties</th>
-          <th></th>
+          <th>Specialties</th>
+          <th>Get More</th>
         </tr>
       </thead>  
       <tbody>
         {% for result in db_trainer %}
         <tr>
-          <td><img src="{{result[1]}}" width="200"></td>
+          <td><img src="{{result[1]}}" width="100"></td>
           <td>{{result[2]}}</td>
           <td>{{result[3]}}</td>
           <td>{{result[4]}}</td>
